Fix bug with answers not showing on timer finish

--- a/src/styles/QuizTile.module.css
+++ b/src/styles/QuizTile.module.css
@@ -26,7 +26,7 @@
 }
 
 .QuizSmallText {
-    font-size: 0.8rem;
+    font-size: 1rem;
     margin-bottom: 0;
 }
 
